--- a/me.html
+++ b/me.html
@@ -1,1 +1,10 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+    <a href="./index.html">tillbaka</a>
+    <p>
+        Jag heter Andrei och är 16 år gammal. På min fritid gillar jag att spela fotboll, basket och andra bollsporter. Jag spelar också tv-spel och gå ut med vänner. just nu går jag teknik på Amerikanska Gymnasiet och än så länge gillar jag skolan.
+    </p>
+</body>
