--- a/interests.html
+++ b/interests.html
@@ -1,1 +1,8 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+    <a href="./index.html">tillbaka</a>
+    <p></p>
+</body>
