--- a/documentation.html
+++ b/documentation.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+<head>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+    <a href="./index.html">tillbaka</a>
+    <ul>
+       <li>Jag hade stort problem i början med att spara hela projektet eftersom jag inte hade skapat och lagt det i någon fil så jag fick börja om helt och hållet eftersom det inte blev sparat</li> 
+       <li>Jag hade också svårt att förstå lektionerna ibland för att det blev väldigt mycket genomgång och det började bli svårt</li>
+       <li>Jag klarade också inte av att vara klar innan deadlinen så det måste jag förbättra</li>
+    </ul>
+</body>
