--- a/interests.html
+++ b/interests.html
@@ -4,5 +4,5 @@
 </head>
 <body>
     <a href="./index.html">tillbaka</a>
-    <p></p>
+    <p>Fotboll och basket med kompisar eller skolan är nog det roligaste jag vet men jag gillar också tv-spel när jag är hemma. Jag har nog inte så många andra intressen  </p>
 </body>
